<resources>
    <string name="app_name">Dungeon Stroll</string>
    <string name="language">Choose Language</string>
    <string name="credits">Credits</string>
    <string name="heroes">Heroes</string>
    <string name="explore">Explore</string>
    <string name="achievments">Achievments</string>
    <string name="back">Back</string>
    <string name="cleric">Cleric</string>
    <string name="wizard">Wizard</string>
    <string name="knight">Knight</string>
    <string name="mage">Mage</string>
    <string name="upgrade">Upgrade</string>
    <string name="encounter">Encounter</string>
    <string name="finish">Finish Encounter</string>
    <string name="park_lotnikow_start">Hello adventures, please help me defeat the undead that started to plaque this place</string>
    <string name="park_tysiaclecia_start">Hello adventures, it seems some slimes appeared nearby. Could you perhaps defeat them for me?</string>
    <string name="flavor_text_1">Team, get ready i think i heard something ahead</string>
    <string name="flavor_text_2">Guys did you also heard that?</string>
    <string name="ability_use">" used ability "</string>
    <string name="and_dealt">" and dealt "</string>
    <string name="damage">" damage"</string>
    <string name="and_given_allies">" and given allies "</string>
    <string name="block">" block"</string>
    <string name="and_healed">" and healed"</string>
    <string name="hp">" health"</string>
    <string name="targeting">"to "</string>
    <string name="damage_to_all">" damage to all heroes"</string>
    <string name="skeleton">Skeleton</string>
    <string name="slime">Slime</string>
    <string name="slash">slash</string>
    <string name="defend">defend</string>
    <string name="fireball">fireball</string>
    <string name="firestorm">firestorm</string>
    <string name="quick_cast">quick cast</string>
    <string name="powerfull_cast">powerfull cast</string>
    <string name="holy_light">holy light</string>
    <string name="mass_heal">mass heal</string>
    <string name="wide_slash">wide slash</string>
    <string name="undead_rush">undead rush</string>
    <string name="acid_splash">acid splash</string>
    <string name="devour">devour</string>
    <string name="upgrade1">deals damage</string>
    <string name="upgrade2">defends for:</string>
    <string name="upgrade3">heals for:</string>
    <string name="couldown">couldown</string>
    <string name="finish_exploring">Finish exploring</string>
    <string name="park_lotnikow_end">Congratulations, you did it! As a reward I invite you to rest next to pond. It was created mostly out of rain water gathered from the roof of Tauron Arena</string>
    <string name="park_tysiaclecia_end">Congratulations, you defeated all slimes! As a reward I invite you to play a game of chess, which you can play on the tables placed around the park</string>
    <string name="park_lotnikow_lost">Oh no the undead got you. Get stronger and try again another time</string>
    <string name="park_tysiaclecia_lost">Are you alright? You should get stronger and try again next time</string>
    <string name="treasure_found">"Heroes have found treasure containing "</string>
    <string name="gold_amount">" gold coins"</string>
    <string name="fight_amount">"After defeating and looting enemy heroes had found "</string>
    <string name="won">" won"</string>
    <string name="lost">" lost"</string>
    <string name="idea">Originator</string>
    <string name="programmer">Programmer</string>
    <string name="font">Font</string>
    <string name="characters_graphic">Characters graphic</string>
    <string name="other_graphic">Other graphics</string>
    <string name="planty_bienczyckie_start">Hello adventures, nearby green areas got infested with some skeletons. Could you help me and remove them?</string>
    <string name="planty_bienczyckie_lost">It seems plague got better of you, let me patch you up and good luck next time.</string>
    <string name="planty_bienczyckie_end">Congratulations, you did it! As a reward I invite you to see a sculpture of a world renown artist: Wincenty Kućma, titled \"Dojrzewanie II\" by town people more commonly known as peas</string>
    <string name="politechnika_start">Hello adventures, some monsters appeared nearby - please help me and defeat them!</string>
    <string name="politechnika_lost">Oh no, you lost. Try again once you are stronger.</string>
    <string name="politechnika_end">Congratulations, you did it! If you wish to rest after job well done you can do so in Gallery Gil nearby</string>
</resources>