<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:src="@drawable/logo"
            />
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:fontFamily="@font/alagard"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/titleLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/exploreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alagard"
            android:text="@string/explore"
            android:textSize="32sp" />

        <!-- TODO add some images-->

        <Button
            android:id="@+id/heroesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alagard"
            android:text="@string/heroes"
            android:textSize="32sp" />

        <Button
            android:id="@+id/achievmentsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alagard"
            android:text="@string/achievments"
            android:textSize="32sp" />
        <!-- TODO add some images-->

        <Button
            android:id="@+id/creditsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alagard"
            android:text="@string/credits"
            android:textSize="32sp" />
        <!-- TODO add some images-->
    </LinearLayout>


</RelativeLayout>