<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeroesActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:fontFamily="@font/alagard"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@drawable/coins"
            />
        <TextView
            android:id="@+id/coins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text=""
            android:fontFamily="@font/alagard"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/knight"
                android:textSize="32sp" />

            <Button
                android:id="@+id/knightButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/knight"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:fontFamily="@font/alagard"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/mage"
                android:layout_weight="1"
                android:textSize="32sp" />

            <Button
                android:id="@+id/mageButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/mage"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:fontFamily="@font/alagard"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <pl.droidsonroids.gif.GifImageView
                android:src="@drawable/wizard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="32sp" />

            <Button
                android:id="@+id/wizardButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/wizard"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:fontFamily="@font/alagard"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <pl.droidsonroids.gif.GifImageView
                android:src="@drawable/cleric"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="32sp" />

            <Button
                android:id="@+id/clericButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/cleric"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:fontFamily="@font/alagard"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:text="@string/back"
        android:textSize="32sp"
        android:fontFamily="@font/alagard"/>

</RelativeLayout>